<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#AA000000"
    android:gravity="bottom">

    <!-- Top controls: Subtitles, Audio, Quality -->
    <LinearLayout
        android:id="@+id/top_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:padding="@dimen/spacing_medium"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_subtitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitles"
            android:minWidth="120dp"
            android:layout_marginEnd="@dimen/spacing_small"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:id="@+id/btn_audio_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_track"
            android:minWidth="120dp"
            android:layout_marginEnd="@dimen/spacing_small"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:id="@+id/btn_video_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_quality"
            android:minWidth="120dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/Widget.AppCompat.Button.Borderless" />
    </LinearLayout>

    <!-- Progress bar area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:id="@+id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            tools:text="00:00" />

        <ProgressBar
            android:id="@+id/exo_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small" />

        <TextView
            android:id="@+id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            tools:text="00:00" />
    </LinearLayout>

    <!-- Playback controls -->
    <LinearLayout
        android:id="@+id/playback_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/spacing_medium">

        <Button
            android:id="@+id/btn_rewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rewind"
            android:minWidth="100dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:id="@+id/exo_play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:minWidth="100dp"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusLeft="@id/btn_rewind"
            android:nextFocusRight="@id/btn_fast_forward"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:id="@+id/btn_fast_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast_forward"
            android:minWidth="100dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/Widget.AppCompat.Button.Borderless" />
    </LinearLayout>

    <!-- Bottom controls: TV Guide, Play Next -->
    <LinearLayout
        android:id="@+id/bottom_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/spacing_medium">

        <Button
            android:id="@+id/btn_tv_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_guide"
            android:minWidth="150dp"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:id="@+id/btn_play_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_next_episode"
            android:minWidth="150dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone"
            style="@style/Widget.AppCompat.Button.Borderless" />
    </LinearLayout>

</LinearLayout>
